--- a/src/Panels/StartPage.css
+++ b/src/Panels/StartPage.css
@@ -57,7 +57,8 @@
 }
 
 .start-page{
-    background: linear-gradient(155.93deg, #F49D91 9.92%, rgba(237, 87, 177, 0.54) 92.29%);
+    background: linear-gradient(150.65deg, rgba(248, 212, 83, 0.65) 0%, rgba(255, 91, 163, 0.65) 74.48%);
+    /* background: linear-gradient(155.93deg, #F49D91 9.92%, rgba(237, 87, 177, 0.54) 92.29%); */
     width: 100%;
     height: 100vh;
     position: absolute;
