final prototip version

--- a/src/Panels/MapPage.css
+++ b/src/Panels/MapPage.css
@@ -10,3 +10,24 @@
 .leaflet-control-zoom{
   opacity: 0;
 }
+
+.leaflet-popup-content{
+  height: 20vh;
+  width: 60vw !important;
+  background-image: url("http://hotel-gatchina.ru/wp-content/uploads/2016/03/kirha2-sm.jpg");
+  background-size: 60vw 20vh;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
+  text-align: center;
+  border-radius: 10px;
+  margin-top: -44%;
+}
+
+
+.leaflet-popup-tip-container{
+  left:50%;
+}
+
+.leaflet-popup-close-button{
+  opacity: 0;
+}
